Issue #16: fix wrapping issue with 'overflow:auto'

--- a/src/static/index.css
+++ b/src/static/index.css
@@ -9,7 +9,7 @@ html {
     display: flex;
     flex-direction: column;
     max-width: 100%;
-    width: 220px;
+    width: 230px;
     gap: 10px;
     margin: 5px;
 }
@@ -128,6 +128,7 @@ input[type=number]{
 .row {
     display: flex;
     max-width: 99%;
+    overflow: auto;
 }
 
 .m {
